# Audio-Time-Frequency-Classification-

./: .gitignore  README.md  environment.yaml  pyproject.toml
audiodetect/: utils.py
audiodetect/data/: __init__.py  augmentations.py  dataset.py  utils_data.py
audiodetect/metric/: __init__.py  kaggle_metric_utilities.py  metric.py
audiodetect/models/: __init__.py  loss.py  model.py  trainer.py
config/: config.yaml  data.yaml
notebooks/: train.ipynb
scripts/: cross_validation.py
scripts/data/: audio2spec.py  save_mapping_dicts.py  spec2dict.py
tests/: test_dataset.py
