[tool.poetry]
name = "audiodetect"
version = "0.1.0"
description = ""
authors = ["ybouaouni <yacinebouaouni07@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.4"
librosa = "^0.10.1"
matplotlib = "^3.8.4"
pandas = "^2.2.2"
tqdm = "^4.66.2"
ruff = "^0.4.2"
omegaconf = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
